--- a/css/profile.css
+++ b/css/profile.css
@@ -78,6 +78,87 @@ body{
 }
 /* Navbar end */
 
+/* Hamburger menu */
+
+#hamburger-menu{
+    display: none;
+}
+
+/* Hamburger menu end */
+
+/* Media queries */
+
+/* Laptop */
+
+@media screen and (max-width: 1366px){
+    html{
+        font-size: 75%;
+    }  
+
+    #hamburger-menu{
+        display: inline-block;
+    }
+
+    .navbar .navbar-nav{
+        position: absolute;
+        top: 100%;
+        right: -100%;
+        background-color: white;
+        width: 30rem;
+        height: 50vh;
+        border-radius: 10px;
+        transition: 1s;
+    }
+
+    .navbar .navbar-nav.active{
+        right: 0;
+    }
+
+    .navbar .navbar-nav a{
+        color: var(--bg);
+        display: block;
+        margin: 1.5rem;
+        padding: 0.5rem;
+        font-size: 2rem;
+        
+    }
+
+    .navbar .navbar-nav a::after {
+        transform-origin: 0 0;
+    }
+
+    .navbar .navbar-nav a:hover::after {
+        transform-origin: 0 0;
+        transform: scaleX(0.2);
+    }
+}
+
+/* Laptop end */
+
+/* Teblet */
+
+@media screen and (max-width: 768px){
+    html{
+        font-size: 60%;
+    } 
+}
+
+/* Tablet end */
+
+/* Moblie */
+
+@media screen and (max-width: 450px){
+    html{
+        font-size: 50%;
+    }
+}
+
+/* Mobile */
+
+/* Media queries end */
+
+
+
 /* Hero section */
 .hero{
     min-height: 100vh;
