--- a/css/profile.css
+++ b/css/profile.css
@@ -253,14 +253,17 @@ body{
  }
 
 .hero .foto :nth-child(1){
+    margin-top: 10rem;
     margin-left: 10rem;
 }
 
 .hero .foto :nth-child(2) {
+    margin-top: 10rem;
     margin-left: 10rem;
 }
 
 .hero .foto :nth-child(3) {
+    margin-top: 10rem;
     margin-left: 10rem;
 }
 
