--- a/css/profile.css
+++ b/css/profile.css
@@ -93,7 +93,7 @@ body{
 
 @media screen and (max-width: 1366px){
     html{
-        font-size: 75%;
+        font-size: 90%;
     }  
 
     #hamburger-menu{
@@ -141,7 +141,7 @@ body{
 
 @media screen and (max-width: 768px){
     html{
-        font-size: 60%;
+        font-size: 80%;
     } 
 
     #hamburger-menu{
@@ -191,7 +191,7 @@ body{
 
 @media screen and (max-width: 450px){
     html{
-        font-size: 50%;
+        font-size: 70%;
     }
 
     #hamburger-menu{
@@ -231,6 +231,10 @@ body{
         transform-origin: 0 1;
         transform: scaleX(0.2);
     }
+
+    .hero .foto {
+        margin-top: 10rem;
+    }
 }
 
 /* Mobile */
@@ -253,17 +257,17 @@ body{
  }
 
 .hero .foto :nth-child(1){
-    margin-top: 10rem;
+    margin-top: 2rem;
     margin-left: 8rem;
 }
 
 .hero .foto :nth-child(2) {
-    margin-top: 10rem;
+    margin-top: 2rem;
     margin-left: 8rem;
 }
 
 .hero .foto :nth-child(3) {
-    margin-top: 10rem;
+    margin-top: 2rem;
     margin-left: 8rem;
 }
 
