--- a/css/profile.css
+++ b/css/profile.css
@@ -233,8 +233,8 @@ body{
     }
 
     .hero .foto {
-        margin-top: 2rem;
-        margin-left: 1rem;
+        margin-top: rem;
+        margin-left: 2rem;
     }
 }
 
